Edited environment.json, Dockerfile, metadata.yml

--- a/metadata/metadata.yml
+++ b/metadata/metadata.yml
@@ -1,5 +1,5 @@
 metadata_version: 1
-name: AIND CNC SmartSPIM Workshop Copy
+name: Saskia workshop
 description: Basic structure of a capsule to be customized as needed.
 authors:
 - name: AIND
