--- a/metadata/metadata.yml
+++ b/metadata/metadata.yml
@@ -1,5 +1,8 @@
 metadata_version: 1
-name: AIND-CNC-SmartSPIM-Workshop
-description: Basic structure of a capsule to be customized as needed.
+name: 'CNC Workshop: Mesoscale Connectivity'
+description: Capsule for the UW CNC Workshop on mesoscale connectivity (Dec 4, 2024)
 authors:
 - name: AIND
+- name: Suyee Lee
+- name: Saskia de Vries
+- name: Mathew Summers
